# context_model_generator

context_generator_agent/: .env.example  pyproject.toml
context_generator_agent/resources/: agent_intro.json  base_ontology.json  context_model_schema.json
context_generator_agent/resources/client_data/: bakery.sqlite  business_rules.txt
context_generator_agent/resources/client_data/code/: insert_data.py
context_generator_agent/setup/: setup_client_ecosystem.py
context_generator_agent/src/context_generator_agent/: __init__.py  agent.py  main.py
context_generator_agent/src/context_generator_agent/tools/: __init__.py
